- add the ability to move border property to box model section - update dependencies

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,9 @@
 {
-  "extends": "airbnb-base",
-  "plugins": ["jest"],
+  "extends": ["airbnb-base", "prettier"],
+  "plugins": ["prettier", "jest"],
+  "rules": {
+    "prettier/prettier": "error"
+  },
   "env": {
     "jest/globals": true
   }
