--- a/package.json
+++ b/package.json
@@ -30,18 +30,18 @@
     "order"
   ],
   "dependencies": {
-    "stylelint-order": "^2.0.0"
+    "stylelint": "^9.10.1",
+    "stylelint-order": "^2.2.1"
   },
   "devDependencies": {
-    "eslint": "^5.12.1",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-prettier": "^4.0.0",
-    "eslint-plugin-import": "^2.15.0",
-    "eslint-plugin-jest": "^22.1.3",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jest": "^22.4.1",
     "eslint-plugin-prettier": "^3.0.1",
-    "jest": "^24.0.0",
-    "prettier": "^1.16.1",
-    "stylelint": "^9.10.1"
+    "jest": "^24.7.1",
+    "prettier": "^1.16.4"
   },
   "homepage": "https://github.com/constverum/stylelint-config-rational-order"
 }
