--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "order-css",
     "order"
   ],
-  "dependencies": {
-    "stylelint": "^9.10.1",
-    "stylelint-order": "^2.2.1"
+  "peerDependencies": {
+    "stylelint": "^13.2.0",
+    "stylelint-order": "^4.0.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
