--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "eslint-plugin-jest": "^22.4.1",
     "eslint-plugin-prettier": "^3.0.1",
     "jest": "^24.7.1",
-    "prettier": "^1.16.4"
+    "prettier": "^1.16.4",
+    "stylelint": "^13.8.0",
+    "stylelint-order": "^4.1.0"
   },
   "homepage": "https://github.com/constverum/stylelint-config-rational-order"
 }
