--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "@zielak/stylelint-config-rational-order",
-  "version": "0.1.3",
+  "name": "@greenly/stylelint-config-rational-order",
+  "version": "0.2.0",
   "description": "Stylelint config that sorts related property declarations by grouping together following the order: Positioning, Box Model, Typography, Visual, Animation, Other.",
   "author": "Constverum <constverum@gmail.com>",
+  "contributors": [{
+    "name" : "Darek Greenly",
+    "url" : "https://darekgreenly.com"
+  }],
   "license": "Apache-2.0",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/constverum/stylelint-config-rational-order.git"
+    "url": "git+https://github.com/Zielak/stylelint-config-rational-order.git"
   },
   "bugs": {
-    "url": "https://github.com/constverum/stylelint-config-rational-order/issues"
+    "url": "https://github.com/Zielak/stylelint-config-rational-order/issues"
   },
+  "homepage": "https://github.com/Zielak/stylelint-config-rational-order",
   "scripts": {
     "lint": "eslint .",
     "test": "jest"
@@ -31,20 +36,19 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "eslint": "^6.7.2",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-jest": "^23.1.1",
-    "eslint-plugin-prettier": "^3.1.2",
-    "jest": "^24.9.0",
-    "prettier": "^1.19.1",
-    "stylelint": "^12.0.0",
-    "stylelint-order": "^3.1.1"
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jest": "^24.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.1.1",
+    "prettier": "^2.4.0",
+    "stylelint": "^13.13.1",
+    "stylelint-order": "^4.1.0"
   },
-  "homepage": "https://github.com/constverum/stylelint-config-rational-order",
   "peerDependencies": {
-    "stylelint": "^12.0.0",
-    "stylelint-order": "^3.1.1"
+    "stylelint": "^13.13.1",
+    "stylelint-order": "^4.1.0"
   }
 }
