--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,16 @@
 {
-  "extends": ["airbnb-base", "prettier"],
-  "plugins": ["prettier", "jest"],
-  "rules": {
-    "prettier/prettier": "error"
-  },
+  "extends": [
+    "eslint:recommended",
+    "prettier"
+  ],
+  "plugins": [
+    "prettier",
+    "jest"
+  ],
+  "rules": {},
   "env": {
+    "es6": true,
+    "node": true,
     "jest/globals": true
   }
 }
