--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stylelint-config-rational-order",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "description": "Stylelint config that sorts related property declarations by grouping together following the order: Positioning, Box Model, Typography, Visual, Animation, Other.",
   "author": "Constverum <constverum@gmail.com>",
   "license": "Apache-2.0",
@@ -13,8 +13,9 @@
     "url": "https://github.com/constverum/stylelint-config-rational-order/issues"
   },
   "scripts": {
-    "lint": "node ./node_modules/eslint/bin/eslint.js .",
-    "test": "node ./node_modules/jest-cli/bin/jest.js"
+    "lint": "eslint .",
+    "test": "jest",
+    "audit:fix": "yarn-audit-fix --force"
   },
   "keywords": [
     "stylelint",
@@ -30,18 +31,19 @@
     "order"
   ],
   "dependencies": {
-    "stylelint": "^9.10.1",
-    "stylelint-order": "^2.2.1"
+    "stylelint": "^14.6.1",
+    "stylelint-order": "^5.0.0"
   },
   "devDependencies": {
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jest": "^22.4.1",
-    "eslint-plugin-prettier": "^3.0.1",
-    "jest": "^24.7.1",
-    "prettier": "^1.16.4"
+    "eslint": "^8.12.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.1.3",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.5.1",
+    "prettier": "^2.6.2",
+    "yarn-audit-fix": "^9.2.2"
   },
   "homepage": "https://github.com/constverum/stylelint-config-rational-order"
 }
